# rl_2048

./: CLAUDE.md  game2048.py  game_ui.py  hello_world.py  index.html  ml_app.html  model.py  pyproject.toml  static_ui.html  test_augmentation.py  test_game2048.py  test_game_ui.py  test_ml_app.js  test_network_validation.py  test_training_visualizer.py  trainer.py  training_dashboard.html  training_visualizer.py  web_ui.py
docs/: backlog.md  conventions.md  dqn_experiment_guide.md  karpathy-guidelines.md  ml_visualization_plan.md  pr2_comprehensive_review.md  pr2_game_ui_review.md  pr_review_2048_env.md  reinforcement_learning.md  review_conv_branch_architecture.md  todo.md  usage.md
src/: game2048.py  game_ui.py  model.py  trainer.py  training_visualizer.py  web_ui.py
static/: ml_app.html
static/css/: style.css
static/js/: game2048.js  qnetwork.js  trainer.js  ui.js
tests/: test_augmentation.py  test_game2048.py  test_game_ui.py  test_ml_app.js  test_training_visualizer.py
