[project]
name = "rl-2048"
version = "0.1.0"
description = "2048 game environment for reinforcement learning"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic",
    "pygame",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "ruff",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
